[fix] Input - error label overflow and  selection on disable

--- a/src/inputs/input.atom.css
+++ b/src/inputs/input.atom.css
@@ -37,6 +37,7 @@
 
 .input.s_error .error {
     display: block;
+    overflow: auto;
 }
 
 .input.s_error input {
